--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
